<resources>
    <string name="app_name">Vibe</string>
    <string name="text_forgot_passord">Forgot your <b>password</b>&#63;</string>
    <string name="text_register_account">Haven\'t register yet&#63; <b>Create account</b></string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_explore">Explore</string>
    <string name="main_menu_add">Add</string>
    <string name="main_menu_notification">Notification</string>
    <string name="main_menu_profile">Profile</string>
    <string name="file_authority">com.quirckymissioncontrol.vibe.fileprovider</string>
    <string name="string_forgot_password">Forgot Your Password&#63;</string>
    <string name="string_password">Password</string>
    <string name="string_register_activity">Register</string>
    <string name="string_register_with_facebook">Register with Facebook</string>
    <string name="string_register_with_twitter">Register with Twitter</string>
    <string name="string_submit">Submit</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_done">Done</string>
    <string name="string_add_text">Add Text</string>
    <string name="string_next">Next</string>
    <string name="string_propagate_vibe">Propagate Your Vibe</string>
    <string name="string_write_caption">Write Caption</string>
    <string name="string_invite_to_collab">Invite to Collab</string>
    <string name="string_add_page">&#43; Add Page</string>
    <string name="string_in_thing">In-thing</string>
    <string name="string_neighboring_vibe">Neighboring Vibe</string>
    <string name="string_latest_stories">Latest stories</string>
    <string name="string_skip_tutorial">Skip Tutorial</string>
    <string name="string_all_set">All set! &gt;</string>
    <string name="string_published_vibes">Published Vibes</string>
    <string name="string_published">PUBLISHED</string>
    <string name="string_drafts">DRAFTS</string>
    <string name="string_drafts_sentence">Drafts</string>
    <string name="string_stories">Stories</string>
    <string name="string_followers">Followers</string>
    <string name="string_unpublished">Unpublished</string>
    <string name="string_edit">Edit</string>
    <string name="string_back">Back</string>
    <string name="string_finishing">Finishing</string>
    <string name="string_radiate">Radiate!</string>
    <string name="string_make_cover">Make Cover</string>
    <string name="string_make_last">Make Last</string>
    <string name="string_save">Save</string>
    <string name="string_discard">Discard</string>
    <string name="string_settings">Settings</string>
    <string name="string_terms_conditions">Terms &amp; Conditions</string>
    <string name="string_about_vibe">About Vibe</string>
    <string name="string_notification_settings">Notification Settings</string>
    <string name="string_likes">Likes</string>
    <string name="string_comments">Comments</string>
    <string name="string_from_friends">From Friends</string>
    <string name="string_from_anonymous">From Anonymous</string>
    <string name="string_from_all">From All</string>
    <string name="string_change_password">Change Password</string>
    <string name="string_apply">Apply</string>
    <string name="string_help_feedback">Help &amp; Feedback</string>
    <string name="string_rate_us">Rate Us</string>
    <string name="string_submit_rating">Submit Rating</string>
    <string name="string_upload_cover">Upload cover</string>
    <string name="string_enable_comments">Enable Comments</string>
    <string name="string_check_in">Check In</string>
    <string name="string_check_in_with_google">Check In With Google</string>
    <string name="string_check_in_with_facebook">Check In With Facebook</string>
    <string name="string_browse_as_tourist">Browse as Tourist</string>
    <string name="string_loading">Loading…</string>
    <string name="string_no_data">No Data</string>
    <string name="string_vibe">VIBE</string>
    <string name="string_profile">PROFILE</string>
    <string name="string_search">Search</string>
    <string name="string_register_with_google">Register with Google</string>
    <string name="string_edit_profile">Profile</string>
    <string name="string_address">Address</string>
    <string name="string_please_register">Please register to VIBE</string>
    <string name="string_ok">OK</string>
    <string name="string_please_re_login">Please re-login</string>
    <string name="string_please_allow_permission">Please allowed the required permission</string>
    <string name="string_select_image_source">Select image source</string>
    <string name="string_exit_vibe">Are you sure you want to exit VIBE&#63;</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_triple_dot">…</string>
    <string name="string_page_number">%1$d / %2$d</string>
    <string name="string_update">Update</string>
    <string name="string_min_chars">Minimum characters is %1$d</string>
    <string name="string_no_empty_page">Please make sure that there is no blank page</string>
    <string name="string_display_name_with_username">%1$s (@%2$s)</string>
    <string name="string_logout_message">Are you sure to logout ?</string>
    <string name="string_logout">Logout</string>
    <string name="string_reply">Reply</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_username">Username</string>
    <string name="hint_real_name">Real name</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Retype password</string>
    <string name="hint_propagate_vibe_page">Tap to Add images, texts\nor sound</string>
    <string name="hint_finishing_cover">Tap to add a cover image\nMin. dimension is 720x480 px</string>
    <string name="hint_write_caption_here"><i>Write your creative caption here</i></string>
    <string name="hint_tag"><i>Tag</i></string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_retype_new_password">Re-type new password</string>
    <string name="hint_write_comment"><i>Write comment</i></string>
    <string name="hint_description">Description</string>
    <string name="text_forgot_password_description">Please submit your email used for your Vibe account. An email will be sent to your corresponding email which contains a reset link for your password.</string>
    <string name="text_dialog_save_or_discard">Would you like to save your story or just discard it?</string>
    <string name="text_help_feedback">Look for the topics regarding your troubles with our app right here. If you would like to reach us further or have feedbacks about Vibe, please reach us out at <b>help@vibeapp.com</b>.</string>
    <string name="text_satisfaction">Are you satisfied with our service?</string>
    <string name="text_notification_follow">&lt;b>%1$s&lt;/b> followed you</string>
    <string name="text_notification_like">&lt;b>%1$s&lt;/b> liked your %2$s</string>
    <string name="text_notification_comment">&lt;b>%1$s&lt;/b> commented on your %2$s</string>
</resources>