<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_grey_24dp"
        android:title="@string/main_menu_home" />
    <item
        android:id="@+id/action_explore"
        android:icon="@drawable/ic_search_grey_24dp"
        android:title="@string/main_menu_explore" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_circle_grey_24dp"
        android:title="@string/main_menu_add" />
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications_grey_24dp"
        android:title="@string/main_menu_notification" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person_grey_24dp"
        android:title="@string/main_menu_profile" />
</menu>